--- a/src/pages/produktoversikt/produktoversikt.njk
+++ b/src/pages/produktoversikt/produktoversikt.njk
@@ -17,9 +17,9 @@ bodyClass: ''
         const item = el.querySelector('h2').textContent.toLowerCase()
         if (this.search === '') {
           return (
-            (this.typeFilter === 'alle' || el.dataset.type.includes(this.typeFilter))
+            (this.typeFilter === 'alle' || el.dataset.type.startsWith(this.typeFilter))
             &&
-            (this.areaFilter === 'alle' || el.dataset.area.includes(this.areaFilter))
+            (this.areaFilter === 'alle' || el.dataset.area.startsWith(this.areaFilter))
           )
         } else {
           this.typeFilter = 'alle'
@@ -60,7 +60,7 @@ bodyClass: ''
         updateCount()
       });
       updateCount()">
-    <div class="grid grid-cols-layout pb-6">
+    <div class="grid pb-6 grid-cols-layout">
       <div class="relative w-full col-content lg:col-feature">
 
         <div class="hidden float-right my-2 ml-24 xs:block">
@@ -84,20 +84,20 @@ bodyClass: ''
           <input id="searchFilter" type="search" x-model="search" class="w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
         </div>
 
-        <div class="lg:-mt-10 lg:row-span-3 lg:col-start-2 relative" x-data="{ filterDrawer: false, filterTags: false, filterSearch: false }">
+        <div class="relative lg:-mt-10 lg:row-span-3 lg:col-start-2" x-data="{ filterDrawer: false, filterTags: false, filterSearch: false }">
 
           {% set labelClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base bg-gray-100 rounded-full hover:bg-deepblue-100 peer-checked:bg-deepblue-500 peer-checked:text-white peer-focus:ring-2 peer-focus:ring-deepblue-800" %}
           {% set inputClasses = "absolute opacity-0 pointer-events-none peer" %}
 
           <div class="flex gap-2.5 sm:hidden">
-            <button class="flex-1 flex items-center justify-start gap-3 rounded bg-deepblue-100 py-3 px-4 leading-none"
+            <button class="flex items-center justify-start flex-1 gap-3 px-4 py-3 leading-none rounded bg-deepblue-100"
             x-on:click="filterDrawer = true, filterSearch = false, filterTags = true"
             x-bind:aria-expanded="filterDrawer && filterTags">
               {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
               <span>Velg type og/eller område</span>
             </button>
 
-            <button class="flex items-center justify-center gap-2 rounded bg-blue-500 text-white py-3 px-8 leading-none"
+            <button class="flex items-center justify-center gap-2 px-8 py-3 leading-none text-white bg-blue-500 rounded"
             x-on:click="filterDrawer = true, filterSearch = true, filterTags = false"
             x-bind:aria-expanded="filterDrawer && filterSearch">
               {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6 -ml-2') | safe }}
@@ -105,14 +105,14 @@ bodyClass: ''
             </button>
           </div>
 
-          <div class="fixed overflow-hidden overscroll-contain inset-0 z-50" x-show="filterDrawer" x-bind:class="filterDrawer && 'animate-blur'"
+          <div class="fixed inset-0 z-50 overflow-hidden overscroll-contain" x-show="filterDrawer" x-bind:class="filterDrawer && 'animate-blur'"
               x-transition:enter="transition ease-out duration-300"
               x-transition:enter-start="opacity-0"
               x-transition:enter-end="opacity-100"
               x-transition:leave="transition ease-in duration-300"
               x-transition:leave-start="opacity-100"
               x-transition:leave-end="opacity-0">
-            <div class="absolute grid inset-x-0 bottom-0 shadow-drawer bg-white rounded-t-2xl sm:hidden"
+            <div class="absolute inset-x-0 bottom-0 grid bg-white shadow-drawer rounded-t-2xl sm:hidden"
               x-show="filterTags"
               x-on:click.outside="filterDrawer = false, filterTags = false"
               x-transition:enter="transition ease-out duration-300"
@@ -121,7 +121,7 @@ bodyClass: ''
               x-transition:leave="transition ease-in duration-300"
               x-transition:leave-start="opacity-100 translate-y-0"
               x-transition:leave-end="opacity-0 translate-y-6">
-              <div class="pt-4 pb-12 px-clamp-gap overflow-y-auto">
+              <div class="pt-4 pb-12 overflow-y-auto px-clamp-gap">
                 <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg type</h2>
                 <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
                   <li>
@@ -172,11 +172,11 @@ bodyClass: ''
                   {% endfor %}
                 </ul>
               </div>
-              <div class="px-clamp-gap py-4 bg-gray-50">
-                <button class="bg-blue-500 py-2 px-4 rounded-lg text-white w-full" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
+              <div class="py-4 px-clamp-gap bg-gray-50">
+                <button class="w-full px-4 py-2 text-white bg-blue-500 rounded-lg" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
               </div>
             </div>
-            <div class="absolute grid py-6 px-clamp-gap inset-x-0 bottom-0 shadow-drawer bg-white rounded-t-2xl sm:hidden"
+            <div class="absolute inset-x-0 bottom-0 grid py-6 bg-white px-clamp-gap shadow-drawer rounded-t-2xl sm:hidden"
               x-show="filterSearch"
               x-on:click.outside="filterDrawer = false, filterSearch = false"
               x-transition:enter="transition ease-out duration-300"
@@ -193,7 +193,7 @@ bodyClass: ''
                   </span>
                   <input x-ref="searchFilter" id="searchFilter" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
                 </div>
-                <button type="submit" class="bg-blue-500 py-3 px-4 rounded text-white whitespace-nowrap focus:outline-none focus:ring focus:ring-blue-800">Vis resultat (<span x-text="count"></span>)</button>
+                <button type="submit" class="px-4 py-3 text-white bg-blue-500 rounded whitespace-nowrap focus:outline-none focus:ring focus:ring-blue-800">Vis resultat (<span x-text="count"></span>)</button>
               </form>
             </div>
           </div>
@@ -258,14 +258,14 @@ bodyClass: ''
             {% for product in collections.produkt %}
               <div
                 x-data="{ expanded: false }"
-                class="focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-t border-deepblue-100"
+                class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-deepblue-100"
                 x-bind:class="expanded ? '' : ''"
                 x-show="filterItem($el)"
                 data-type="{{ product.data.type | slugify }}"
                 data-area="{{ product.data.area | slugify }}">
 
                 <div
-                  class="py-4 px-clamp-gap -mx-clamp-gap -my-px relative z-10 flex items-center gap-4 text-left sm:mx-0 sm:px-4 sm:rounded-lg hover:z-20"
+                  class="relative z-10 flex items-center gap-4 py-4 -my-px text-left px-clamp-gap -mx-clamp-gap sm:mx-0 sm:px-4 sm:rounded-lg hover:z-20"
                   x-bind:class="expanded ? ' hover:bg-deepblue-200 bg-deepblue-50' : 'hover:bg-deepblue-200'">
                   {% if product.data.icon %}
                     {{ product.data.icon | svgContents('w-12 h-12 lg:w-14 lg:h-14 shrink-0') | safe }}
@@ -285,7 +285,7 @@ bodyClass: ''
                       {%- endfor -%}
                     </p>
                   </div>
-                  <button x-on:click="expanded = !expanded" class="absolute inset-0 w-full flex items-center justify-end pr-4 rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800" x-bind:aria-expanded="expanded">
+                  <button x-on:click="expanded = !expanded" class="absolute inset-0 flex items-center justify-end w-full pr-4 rounded-lg group focus:outline-none focus-visible:ring focus-visible:ring-inset focus-visible:ring-blue-800" x-bind:aria-expanded="expanded">
                     <span class="sr-only">Vis/skjul innhold</span>
                     {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('mr-1.5 w-5 h-5 opacity-50 transition duration-100 group-aria-expanded:rotate-180') | safe }}
                   </button>
@@ -298,7 +298,7 @@ bodyClass: ''
                 </div>
 
                 {% if product.data.egenSide %}
-                <div x-bind:hidden="!expanded" class="sm:px-6 pt-4 pb-6">
+                <div x-bind:hidden="!expanded" class="pt-4 pb-6 sm:px-6">
                   <a class="inline-block mx-auto text-center underline hover:no-underline hover:text-blue-600" href="/produktoversikt/{{ product.data.title | slugify }}.html">Vis som egen side</a>
                 </div>
                 {% endif %}
