--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,16 +1,14 @@
-<div class="overflow-y-auto font-mono text-2xl text-white bg-gray-900 md:text-3xl" x-show="indexOpen">
+<div x-ref="prototypeMenu" class="h-screen font-mono text-xl text-white bg-red-600 md:text-2xl" x-show="indexOpen">
   <div class="grid grid-cols-layout">
-    <ul class="py-3 divide-y md:py-6 divide-gray-400/25 col-popout" x-on:click.outside="indexOpen = false">
+    <ul class="list-decimal list-outside divide-y py-clamp-gap divide-gray-400/25 col-feature">
     {% for page in collections.template | sort(false, false, 'data.order') %}
       <li class="">
         <a href="{{ page.url }}" class="inline-block py-4 hover:text-blue-300 hover:underline decoration-from-font underline-offset-4">
-          <span class="w-5">{{ '0' if page.data.order < 10 }}{{ page.data.order }}</span>
         {{ page.data.title | safe }}
         </a>
       </li>
     {% endfor %}
     </ul>
-    <div class="absolute inset-x-0 bottom-0 h-40 pointer-events-none bg-gradient-to-b from-transparent to-gray-600/40"></div>
   </div>
 </div>
 
