--- a/src/pages/produktoversikt-arbeidsgiver/produktoversikt-arbeidsgiver.njk
+++ b/src/pages/produktoversikt-arbeidsgiver/produktoversikt-arbeidsgiver.njk
@@ -62,7 +62,7 @@ bodyClass: ''
       });
       updateCount()">
     <div class="grid grid-cols-layout">
-      <div class="relative w-full col-content lg:col-feature">
+      <div class="relative w-full pb-6 col-content lg:col-feature">
 
         <div class="hidden float-right my-2 ml-24 xs:block">
           {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-[12vw] h-auto overflow-hidden max-w-[8rem] aspect-square') | safe }}
@@ -71,20 +71,137 @@ bodyClass: ''
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title }}</h1>
 
         <p class="max-w-2xl mt-2 text-xl md:mt-3 md:text-2xl">{{ description }}</p>
-
-
       </div>
     </div>
 
     <div class="grid grid-cols-layout">
       <div class="grid w-full gap-8 pb-20 lg:gap-x-16 lg:items-start lg:grid-cols-sidebar col-content lg:col-feature">
 
-        <div class="lg:-mt-4 lg:row-span-2 lg:col-start-2">
+        <div class="relative hidden sm:block lg:col-start-1">
+          <label for="searchFilter" class="font-semibold sr-only">Søk</label>
+          <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+            {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+          </span>
+          <input id="searchFilter" type="search" x-model="search" class="w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
+        </div>
+
+        <div class="relative lg:-mt-1.5 lg:row-span-3 lg:col-start-2" x-data="{ filterDrawer: false, filterTags: false, filterSearch: false }">
+
           {% set labelClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base bg-gray-100 rounded-full hover:bg-deepblue-100 peer-checked:bg-deepblue-500 peer-checked:text-white peer-focus:ring-2 peer-focus:ring-deepblue-800" %}
           {% set inputClasses = "absolute opacity-0 pointer-events-none peer" %}
 
-          <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg type</h2>
-          <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+          <div class="flex gap-2.5 sm:hidden">
+            <button class="flex items-center justify-start flex-1 gap-3 px-4 py-3 leading-none rounded bg-deepblue-100"
+            x-on:click="filterDrawer = true, filterSearch = false, filterTags = true"
+            x-bind:aria-expanded="filterDrawer && filterTags">
+              {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
+              <span>Velg type og/eller område</span>
+            </button>
+
+            <button class="flex items-center justify-center gap-2 px-8 py-3 leading-none text-white bg-blue-500 rounded"
+            x-on:click="filterDrawer = true, filterSearch = true, filterTags = false"
+            x-bind:aria-expanded="filterDrawer && filterSearch">
+              {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6 -ml-2') | safe }}
+              <span>Søk</span>
+            </button>
+          </div>
+
+          <div class="fixed inset-0 z-50 overflow-hidden overscroll-contain sm:hidden" x-show="filterDrawer" x-bind:class="filterDrawer && 'animate-blur'"
+              x-transition:enter="transition ease-out duration-300"
+              x-transition:enter-start="opacity-0"
+              x-transition:enter-end="opacity-100"
+              x-transition:leave="transition ease-in duration-300"
+              x-transition:leave-start="opacity-100"
+              x-transition:leave-end="opacity-0">
+            <div class="absolute inset-x-0 bottom-0 grid bg-white shadow-drawer rounded-t-2xl sm:hidden"
+              x-show="filterTags"
+              x-on:click.outside="filterDrawer = false, filterTags = false"
+              x-transition:enter="transition ease-out duration-300"
+              x-transition:enter-start="opacity-0 translate-y-6"
+              x-transition:enter-end="opacity-100 translate-y-0"
+              x-transition:leave="transition ease-in duration-300"
+              x-transition:leave-start="opacity-100 translate-y-0"
+              x-transition:leave-end="opacity-0 translate-y-6">
+              <div class="pt-4 pb-12 overflow-y-auto px-clamp-gap">
+                <h2 class="text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg type</h2>
+                <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+                  <li>
+                    <input
+                      type="radio"
+                      x-model="typeFilter"
+                      x-on:change="updateCount($refs)"
+                      class="{{ inputClasses }}"
+                      name="filter-type-mobil"
+                      value="alle"
+                      id="filter-type-all"
+                      checked="checked"
+                    />
+                    <label class="{{ labelClasses }}" for="filter-type-all">Alle</label>
+                  </li>
+                  {% for item in typeFilter %}
+                    <li>
+                      <input type="radio" x-on:change="updateCount($refs)" x-model="typeFilter" class="{{ inputClasses }}" name="filter-type-mobil" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                      <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                        {{ item }}
+                      </label>
+                    </li>
+                  {% endfor %}
+                </ul>
+
+                <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg område</h2>
+                <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+                  <li>
+                    <input
+                      type="radio"
+                      x-model="areaFilter"
+                      x-on:change="updateCount($refs)"
+                      class="{{ inputClasses }}"
+                      name="filter-area-mobil"
+                      value="alle"
+                      id="filter-area-all"
+                      checked="checked"
+                    />
+                    <label class="{{ labelClasses }}" for="filter-area-all">Alle</label>
+                  </li>
+                  {% for item in areaFilter %}
+                    <li>
+                      <input type="radio" x-on:change="updateCount($refs)" x-model="areaFilter" class="{{ inputClasses }}" name="filter-area-mobil" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                      <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                        {{ item }}
+                      </label>
+                    </li>
+                  {% endfor %}
+                </ul>
+              </div>
+              <div class="py-4 px-clamp-gap bg-gray-50">
+                <button class="w-full px-4 py-2 text-white bg-blue-500 rounded-lg" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
+              </div>
+            </div>
+            <div class="absolute inset-x-0 bottom-0 grid py-6 bg-white px-clamp-gap shadow-drawer rounded-t-2xl sm:hidden"
+              x-show="filterSearch"
+              x-on:click.outside="filterDrawer = false, filterSearch = false"
+              x-transition:enter="transition ease-out duration-300"
+              x-transition:enter-start="opacity-0 translate-y-6"
+              x-transition:enter-end="opacity-100 translate-y-0"
+              x-transition:leave="transition ease-in duration-300"
+              x-transition:leave-start="opacity-100 translate-y-0"
+              x-transition:leave-end="opacity-0 translate-y-6">
+              <form class="grid gap-3" x-on:submit.prevent="filterSearch = false, filterDrawer = false">
+                <div class="relative" x-trap="filterSearch">
+                  <label for="searchFilter" class="font-semibold sr-only">Søk</label>
+                  <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                    {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                  </span>
+                  <input x-ref="searchFilter" id="searchFilter" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
+                </div>
+                <button type="submit" class="px-4 py-3 text-white bg-blue-500 rounded whitespace-nowrap focus:outline-none focus:ring focus:ring-blue-800">Vis resultat (<span x-text="count"></span>)</button>
+              </form>
+            </div>
+          </div>
+
+          <div class="hidden sm:block">
+            <h2 class="text-sm tracking-widest uppercase opacity-70">Velg type</h2>
+            <ul class="flex flex-wrap items-start mt-2.5 gap-x-1.5 gap-y-2.5">
               <li>
                 <input
                   type="radio"
@@ -98,18 +215,18 @@ bodyClass: ''
                 />
                 <label class="{{ labelClasses }}" for="filter-type-all">Alle</label>
               </li>
-            {% for item in typeFilter %}
-              <li>
-                <input type="radio" x-on:change="updateCount($refs)" x-model="typeFilter" class="{{ inputClasses }}" name="filter-type" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
-                <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
-                  {{ item }}
-                </label>
-              </li>
-            {% endfor %}
-          </ul>
+              {% for item in typeFilter %}
+                <li>
+                  <input type="radio" x-on:change="updateCount($refs)" x-model="typeFilter" class="{{ inputClasses }}" name="filter-type" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                  <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                    {{ item }}
+                  </label>
+                </li>
+              {% endfor %}
+            </ul>
 
-          <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg område</h2>
-          <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
+            <h2 class="mt-6 text-sm tracking-widest uppercase lg:mt-8 opacity-70">Velg område</h2>
+            <ul class="flex flex-wrap items-start mt-2.5 gap-x-1.5 gap-y-2.5">
               <li>
                 <input
                   type="radio"
@@ -123,28 +240,20 @@ bodyClass: ''
                 />
                 <label class="{{ labelClasses }}" for="filter-area-all">Alle</label>
               </li>
-            {% for item in areaFilter %}
-              <li>
-                <input type="radio" x-on:change="updateCount($refs)" x-model="areaFilter" class="{{ inputClasses }}" name="filter-area" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
-                <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
-                  {{ item }}
-                </label>
-              </li>
-            {% endfor %}
-          </ul>
-
+              {% for item in areaFilter %}
+                <li>
+                  <input type="radio" x-on:change="updateCount($refs)" x-model="areaFilter" class="{{ inputClasses }}" name="filter-area" value="{{ item | slugify }}" id="filter-{{ item | slugify }}" />
+                  <label class="{{ labelClasses }}" for="filter-{{ item | slugify }}">
+                    {{ item }}
+                  </label>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
         </div>
 
-        <div class="lg:col-start-1 lg:-order-1">
-          <div class="relative mt-6">
-            <label for="searchFilter" class="font-semibold sr-only">Søk</label>
-            <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-              {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-            </span>
-            <input id="searchFilter" type="search" x-model="search" class="w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
-          </div>
-
-          <p class="mt-8 mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
+        <div class="lg:col-start-1">
+          <p class="mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
             {% for product in products %}
