Fjerne toggle for prototypemeny

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -26,10 +26,10 @@
         {% endfor %}
 
         <div class="-mt-2.5">
-          <button class="flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 hover:border-deepblue-400/50 hover:bg-deepblue-600 rounded hover:shadow-lg hover:text-orange-200">
+          <a href="#" class="flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 hover:border-deepblue-400/50 hover:bg-deepblue-600 rounded hover:shadow-lg hover:text-orange-200">
             <span class="">{{ footer.screenshare.text }}</span>
             {{ footer.screenshare.icon | svgContents("w-5 h-5") | safe }}
-          </button>
+          </a>
         </div>
       </div>
 
