Rette duplikat-id og lenker uten tekst

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -91,7 +91,7 @@
     {%- endif -%}
   </head>
   <body
-    class="min-h-full overflow-y-scroll overflow-x-hidden transition-all duration-200 ease-in {{ bodyClass }}"
+    class="min-h-full overflow-y-scroll overflow-x-hidden {{ bodyClass }}"
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
