--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,4 +1,4 @@
-<div x-ref="prototypeMenu" class="grid items-center h-screen font-mono text-xl text-white bg-deepblue-800 md:text-2xl">
+<div x-ref="prototypeMenu" class="grid items-center min-h-screen font-mono text-xl text-white bg-deepblue-800 md:text-2xl">
   <div class="grid grid-cols-layout py-clamp-gap">
     <h2 class="text-base font-semibold tracking-widest uppercase col-feature text-deepblue-300">Sider i prototypen</h2>
     <ul class="list-decimal list-outside divide-y divide-gray-400/25 col-feature">
