--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -43,9 +43,10 @@
       </div>
 
       <div class="grid gap-2 mt-16">
-        <button x-on:click="indexOpen = !indexOpen, $nextTick(() => $refs.prototypeMenu.scrollIntoView())" x-trap="indexOpen" class="cursor-pointer">
+        <a href="#" x-trap="indexOpen" class="cursor-pointer">
           {{ '/src/_includes/svg/logo.svg' | svgContents('h-6') | safe }}
-        </button>
+          <span class="sr-only">NAV</span>
+        </a>
         <div class="">Arbeids- og velferdsetaten</div>
       </div>
 
