--- a/src/_includes/partials/header-old.njk
+++ b/src/_includes/partials/header-old.njk
@@ -18,9 +18,9 @@
     </div>
   </div>
 
-  <nav class="flex items-center w-full gap-4 col-feature">
+  <nav class="flex items-center w-full gap-8 col-feature">
     {# Logo #}
-    <a href="#" class="text-red-500 hover:text-red-400 block focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 py-2.5 px-2 -mx-2 rounded-sm">
+    <a href="/" class="text-red-500 hover:text-red-400 block focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 py-2.5 px-2 -mx-2 rounded-sm">
       {{ '/src/_includes/svg/logo.svg' | svgContents('w-[75px] h-auto') | safe }}
       <span class="sr-only">NAV</span>
     </a>
@@ -35,14 +35,26 @@
       <ul class="justify-center overflow-hidden text-lg bg-white border border-gray-200 divide-y divide-gray-200 rounded shadow-lg md:rounded-none md:bg-transparent md:shadow-none md:border-0 md:divide-y-0 md:gap-4 md:flex" role="tablist" x-bind:class="audienceDropdownOpen ? 'grid' : 'hidden md:flex'">
         {% for item in menu.audience %}
 
-          {% if (page.fileSlug != 'produktoversikt-arbeidsgiver' and page.fileSlug != 'produktoversikt-samarbeidspartner' and loop.first) or (page.fileSlug === 'produktoversikt-arbeidsgiver' and loop.index === 2) or (page.fileSlug === 'produktoversikt-samarbeidspartner' and loop.index === 3) %}
+          {% if ('samarbeidspartner' in page.fileSlug and loop.last) or ('arbeidsgiver' in page.fileSlug and loop.index === 2) or (loop.first and not ( 'produktoversikt-' in page.fileSlug)) %}
             {% set menuBorder = 'border-blue-500' %}
           {% else %}
             {% set menuBorder = 'border-transparent hover:border-gray-300/75 opacity-70' %}
           {% endif %}
 
+          {% if 'produktoversikt' in page.fileSlug %}
+            {% if loop.first %}
+              {% set audienceLink = '/produktoversikt/' %}
+            {% endif %}
+            {% if loop.index === 2 %}
+              {% set audienceLink = '/produktoversikt-arbeidsgiver/' %}
+            {% endif %}
+            {% if loop.last %}
+              {% set audienceLink = '/produktoversikt-samarbeidspartner/' %}
+            {% endif %}
+          {% endif %}
+
           <li role="tab" aria-selected="{{ 'true' if loop.index === 1 else 'false' }}" class="grid">
-            <a href="#" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-3 md:px-0.5 md:pb-5 text-gray-900 border-l-4 md:border-l-0 md:border-b-4 md:pt-6 {{ menuBorder }}">
+            <a href="{{ audienceLink or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-3 md:px-0.5 md:pb-5 text-gray-900 border-l-4 md:border-l-0 md:border-b-4 md:pt-6 {{ menuBorder }}">
               {{ item | replace('person', "") }}
             </a>
           </li>
