--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,10 +12,10 @@
   :where(.markdown) > *:not(hr) {
     max-width: 64ch;
   }
-  :where(.markdown) > *:not(h2, h3, h4, h5) + * {
+  :where(.markdown) > :where(*):not(h2, h3, h4, h5) + * {
     margin-block-start: theme("spacing.7");
   }
-  .markdown > *:where(h2, h3, h4, h5) + * {
+  :where(.markdown) > *:where(h2, h3, h4, h5) + * {
     margin-block-start: theme("spacing[0.5]");
   }
   :where(.markdown) > p a {
