--- a/src/pages/produktoversikt-arbeidsgiver/produktoversikt-arbeidsgiver.njk
+++ b/src/pages/produktoversikt-arbeidsgiver/produktoversikt-arbeidsgiver.njk
@@ -256,7 +256,7 @@ bodyClass: ''
           <p class="mb-2">Viser <span x-text="count"></span> av {{ products.length }} produkter og tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
-            {% for product in products | sort(true, false, 'title') | reverse %}
+            {% for product in products | sort(true, false, 'data.title') | reverse %}
               <div
                 x-data="{ expanded: false }"
                 class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:-mx-0 sm:px-0 border-deepblue-100"
