--- a/src/pages/produktoversikt/produktoversikt.njk
+++ b/src/pages/produktoversikt/produktoversikt.njk
@@ -257,7 +257,7 @@ bodyClass: ''
           <p class="mb-2">Viser <span x-text="count"></span> av {{ collections.produkt.length }} produkter og tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
-            {% for product in collections.produkt %}
+            {% for product in collections.produkt | sort(true, false, 'data.title') | reverse %}
               <div
                 x-data="{ expanded: false }"
                 class="border-t focus-within:z-10 -mx-clamp-gap px-clamp-gap sm:mx-0 sm:px-0 border-deepblue-100"
