Begrense hover-stiler til enheter med musepeker

--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -4,11 +4,11 @@
 
   {% if params.variant %}
     {% if params.variant === "primary" %}
-      {% set variant = "bg-blue-500 text-white border-blue-500 hover:bg-blue-700 hover:border-blue-700" %}
+      {% set variant = "bg-blue-500 text-white border-blue-500 fine:hover:bg-blue-700 fine:hover:border-blue-700" %}
     {% endif %}
 
     {% if params.variant === "secondary" %}
-      {% set variant = "bg-white text-blue-500 border-white hover:border-blue-500 hover:text-blue-600" %}
+      {% set variant = "bg-white text-blue-500 border-white fine:hover:border-blue-500 fine:hover:text-blue-600" %}
     {% endif %}
   {% endif %}
 
