--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -5,7 +5,7 @@
     </div>
     <div class="max-w-[50ch]">
       <p><strong>Hei!</strong> Dette er en bare en prototype til testing og utvikling.
-      <a class="text-blue-300 underline hover:no-underline hover:text-orange-300" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
+      <a class="text-blue-300 underline fine:hover:no-underline fine:hover:text-orange-300" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
     </div>
     {# <a class="inline-flex items-center gap-3 px-5 py-3 text-white bg-blue-400 rounded" href="https://www.nav.no/">
       <span>Til nav.no</span>
