--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer class="grid self-end pb-8 text-lg text-white bg-deepblue-800 grid-cols-layout" x-bind:inert="menuOpen || notifyOpen">
   <div class="col-feature">
     <div class="flex flex-col items-center py-3">
-      <a class="flex items-center gap-2 text-base text-center hover:underline hover:text-orange-200" href="#">
+      <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
         <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" role="img">
           <path stroke="currentColor" stroke-width="2" d="m7 9 6-6 6 6m-6 10V4" />
         </svg>
@@ -18,7 +18,7 @@
             <ul class="mt-2 mb-7 break-inside-avoid">
               {% for item in section.linkList %}
                 <li class="py-1 pr-2 break-before-avoid">
-                  <a class="hover:underline hover:text-orange-200" href="#">{{ item.text }}</a>
+                  <a class="fine:hover:underline fine:hover:text-orange-200" href="#">{{ item.text }}</a>
                 </li>
               {% endfor %}
             </ul>
@@ -26,7 +26,7 @@
         {% endfor %}
 
         <div class="-mt-2.5">
-          <a href="#" class="flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 hover:border-deepblue-400/50 hover:bg-deepblue-600 rounded hover:shadow-lg hover:text-orange-200">
+          <a href="#" class="inline-flex items-center gap-2 px-3 sm:-mx-3 py-1.5 bg-deepblue-700 border border-deepblue-600 fine:hover:border-deepblue-400/50 fine:hover:bg-deepblue-600 rounded fine:hover:shadow-lg fine:hover:text-orange-200">
             <span class="">{{ footer.screenshare.text }}</span>
             {{ footer.screenshare.icon | svgContents("w-5 h-5") | safe }}
           </a>
@@ -38,7 +38,7 @@
     <div class="flex flex-col justify-between mt-6 sm:flex-row-reverse">
       <div class="flex flex-col justify-between gap-3 mt-6 sm:gap-6 sm:flex-row sm:self-end">
         {% for link in footer.legal %}
-          <a class="hover:underline hover:text-orange-200" href="#">{{ link.text }}</a>
+          <a class="fine:hover:underline fine:hover:text-orange-200" href="#">{{ link.text }}</a>
         {% endfor %}
       </div>
 
