--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,10 +1,10 @@
 <div x-ref="prototypeMenu" class="grid items-center min-h-screen font-mono text-xl text-white bg-deepblue-800 md:text-2xl">
   <div class="grid grid-cols-layout py-clamp-gap">
     <h2 class="text-base font-semibold tracking-widest uppercase col-feature text-deepblue-300">Sider i prototypen</h2>
-    <ul class="list-decimal list-outside divide-y divide-gray-400/25 col-feature">
+    <ul class="list-decimal list-outside divide-y pl-11 divide-gray-400/25 col-feature">
     {% for page in collections.template | sort(false, false, 'data.order') %}
       <li class="">
-        <a href="{{ page.url }}" class="inline-block py-4 hover:text-blue-300 hover:underline decoration-from-font underline-offset-4">
+        <a href="{{ page.url }}" class="inline-block py-4 fine:hover:text-blue-300 fine:hover:underline decoration-from-font underline-offset-4">
         {{ page.data.title | safe }}
         </a>
       </li>
@@ -12,4 +12,3 @@
     </ul>
   </div>
 </div>
-
