--- a/src/pages/forsiden/forsiden.njk
+++ b/src/pages/forsiden/forsiden.njk
@@ -15,8 +15,8 @@ permalink: '/index.html'
         <ul class="grid gap-2 mx-auto mt-4 lg:grid-cols-3 sm:grid-cols-2 sm:gap-4 md:gap-6">
           {% for area in areaList %}
             <li>
-              <a class="relative flex items-center justify-between gap-4 z-10 bg-deepblue-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 hover:text-blue-600 hover:shadow-xl hover:bg-gray-100 focus:shadow-xl min-h-[7rem] lg:min-h-[9rem] pl-6 pr-[40%] py-2 overflow-hidden group c-area-card" href="#">
-                <div class="text-xl font-semibold leading-snug md:text-2xl group-hover:underline">
+              <a class="relative flex items-center justify-between gap-4 z-10 bg-deepblue-50 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 fine:hover:text-blue-600 fine:hover:shadow-xl fine:hover:bg-gray-100 focus:shadow-xl min-h-[7rem] lg:min-h-[9rem] pl-6 pr-[40%] py-2 overflow-hidden group c-area-card" href="#">
+                <div class="text-xl font-semibold leading-snug md:text-2xl group-fine:hover:underline">
                   {{ area.title | safe }}
                 </div>
                 {% if area.icon %}
@@ -35,7 +35,7 @@ permalink: '/index.html'
         <ul class="grid gap-2 mt-4 md:grid-cols-2 sm:gap-3 md:gap-6 lg:grid-cols-3">
           {% for shortcut in shortcutsList %}
             <li>
-              <a class="flex items-center gap-4 py-4 pl-5 pr-8 transition duration-300 ease-out bg-white rounded-lg shadow-sm sm:py-6 group hover:text-blue-600 hover:shadow-lg hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
+              <a class="flex items-center gap-4 py-4 pl-5 pr-8 transition duration-300 ease-out bg-white rounded-lg shadow-sm sm:py-6 group fine:hover:text-blue-600 fine:hover:shadow-lg fine:hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
                 {% if shortcut.icon %}
                   {{ shortcut.icon | svgContents("w-12 h-12 md:w-16 md:h-16") | safe }}
                 {% endif %}
@@ -55,7 +55,7 @@ permalink: '/index.html'
         <ul class="grid gap-2 mt-4 sm:gap-3 md:gap-6 md:grid-cols-2">
           {% for form in formsList %}
             <li>
-              <a class="flex items-center gap-4 py-4 pl-5 pr-8 transition duration-300 ease-out bg-white rounded-lg shadow-sm sm:py-6 group hover:text-blue-600 hover:shadow-lg hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="{{ form.href or '#'}}">
+              <a class="flex items-center gap-4 py-4 pl-5 pr-8 transition duration-300 ease-out bg-white rounded-lg shadow-sm sm:py-6 group fine:hover:text-blue-600 fine:hover:shadow-lg fine:hover:underline focus:outline-none focus:ring-2 focus:ring-blue-600" href="{{ form.href or '#'}}">
                 {% if form.icon %}
                   {{ form.icon | svgContents("w-12 h-12 md:w-16 md:h-16") | safe }}
                 {% endif %}
@@ -72,8 +72,8 @@ permalink: '/index.html'
         <h2 class="-mt-2 text-xl font-semibold md:text-3xl">Aktuelt</h2>
         <div class="grid gap-2 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
           {% for news in newsList %}
-            <a class="grid gap-2 px-6 py-6 duration-300 ease-out bg-white rounded-lg shadow-sm group transition-custom hover:text-blue-600 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
-              <span class="max-w-[30ch] text-xl font-semibold md:text-2xl group-hover:text-blue-600 group-hover:underline">{{ news.title | safe }}</span>
+            <a class="grid gap-2 px-6 py-6 duration-300 ease-out bg-white rounded-lg shadow-sm group transition-custom fine:hover:text-blue-600 fine:hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-600" href="#">
+              <span class="max-w-[30ch] text-xl font-semibold md:text-2xl group-fine:hover:text-blue-600 group-fine:hover:underline">{{ news.title | safe }}</span>
               <span class="text-lg opacity-70">{{ news.date }}</span>
             </a>
           {% endfor %}
@@ -87,7 +87,7 @@ permalink: '/index.html'
         <div class="grid gap-8 mt-4 sm:gap-4 md:gap-6 sm:grid-cols-2">
           <div class="relative grid gap-2 px-6 py-6 bg-blue-50 rounded-t-3xl rounded-r-3xl group">
             <h3 class="text-xl font-semibold md:text-2xl">
-              <a href="#" class="text-blue-600 underline hover:text-deepblue-600 hover:no-underline">Du kan chatte med oss</a>
+              <a href="#" class="text-blue-600 underline fine:hover:text-deepblue-600 fine:hover:no-underline">Du kan chatte med oss</a>
             </h3>
             <p class="text-lg">Du møter først chatbot Frida. Du kan be Frida om å få chatte med en veileder (hverdager 09:00–15:00)</p>
             <svg class="absolute left-0 top-full" viewBox="0 0 24 24" width="24" height="24"  aria-hidden="true" focusable="false" role="img">
@@ -96,7 +96,7 @@ permalink: '/index.html'
           </div>
           <div class="relative grid content-start gap-2 px-6 py-6">
             <h3 class="text-xl font-semibold md:text-2xl">
-              <a href="#" class="text-blue-600 underline hover:text-deepblue-600 hover:no-underline">Du kan også ringe eller skrive til oss</a>
+              <a href="#" class="text-blue-600 underline fine:hover:text-deepblue-600 fine:hover:no-underline">Du kan også ringe eller skrive til oss</a>
             </h3>
             <p class="text-lg">Se hvordan du kan kontakte oss på ulike måter.</p>
           </div>
