--- a/src/pages/produktoversikt/egen-side.njk
+++ b/src/pages/produktoversikt/egen-side.njk
@@ -23,7 +23,7 @@
     <div class="grid grid-cols-layout">
       <div class="pt-12 pb-8 col-content">
 
-        <a href="/produktoversikt/?area={{ product.data.area | slugify }}&type={{ product.data.type | slugify }}" class="font-semibold tracking-wide text-blue-500 uppercase hover:underline">Søknad og skjema fra A til Å</a>
+        <a href="/produktoversikt/?area={{ product.data.area | slugify }}&type={{ product.data.type | slugify }}" class="font-semibold tracking-wide text-blue-500 uppercase fine:hover:underline">Søknad og skjema fra A til Å</a>
         <h1 class="mt-1 text-5xl font-semibold">{{ product.title | safe }}</h1>
         {% if product.data.ingress %}
         <div class="mt-4 text-lg max-w-prose">
