--- a/src/pages/soknad/soknad.njk
+++ b/src/pages/soknad/soknad.njk
@@ -14,7 +14,7 @@ tags: ['template']
 
         <div class="mt-3 md:grid md:grid-flow-row-dense md:gap-20 md:grid-cols-12">
           <div class="mb-3 -mx-3 md:col-span-8 md:hidden" x-data="{ stepperOpen: false }" x-bind:class="stepperOpen && 'bg-gray-50 xs:rounded md:bg-transparent'">
-            <div class="relative px-3 py-3 hover:bg-blue-50 xs:rounded">
+            <div class="relative px-3 py-3 fine:hover:bg-blue-50 xs:rounded">
               <p class="text-sm">Steg 5 av 14</p>
               <div class="flex items-center gap-3 ">
                 <h2 class="text-2xl font-semibold">Arbeidsforhold i EØS</h2>
