Slå sammen innholdsblokker og legge til flex-wrap

--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -24,7 +24,7 @@
   {% endif %}
 
   {% if block.type === 'microcards' %}
-    <div class="flex gap-1.5">
+    <div class="flex flex-wrap gap-1.5">
     {% for item in block.data %}
       {{ microcard(item) }}
     {% endfor %}
